--- a/app/src/main/resources/mensagens/mensagens_pt_BR.properties
+++ b/app/src/main/resources/mensagens/mensagens_pt_BR.properties
@@ -1,3 +1,3 @@
 Usuario.usuarioForm.usuarioDuplicado = Usuário com o login duplicado
 
-Usuario.usuarioForm.usuarioVazio = Usuário nãos informado
+Usuario.usuarioForm.usuarioVazio = Usuário não informado
